sign board detection

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,9 +50,9 @@
             <div class="card">
                 <img src="./asserts/traffic sign.jpg" class="card-img-top" alt="Traffic Sign Detection">
                 <div class="card-body">
-                    <h5 class="card-title">Traffic Sign and Pedestrian Detection</h5>
+                    <h5 class="card-title">Traffic Sign Detection</h5>
                     <p class="card-text">Uses real-time computer vision to improve road safety by identifying traffic signs, pedestrians, and potential hazards.</p>
-                    <a href="#" class="btn">Try</a>
+                    <a href="./Trafic sign detection.html" class="btn">Try</a>
                 </div>
             </div>
     
