--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,7 +61,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Predictive Maintenance</h5>
                     <p class="card-text">Continuously monitors vehicle health and predicts potential failures to reduce breakdowns, maintenance costs, and generates diagnostic reports.</p>
-                    <a href="#" class="btn">Try</a>
+                    <a href="./Predictive.html" class="btn">Try</a>
                 </div>
             </div>
     
