--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,7 +70,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Gamified Driver Engagement</h5>
                     <p class="card-text">Encourages safe and efficient driving behavior through a reward-based system, enhancing user engagement and driving habits.</p>
-                    <a href="#" class="btn">Try</a>
+                    <a href="./signup.html" class="btn">Try</a>
                 </div>
             </div>
         </div>
